# allocator

./: .gitignore  CMakeLists.txt  shell.nix
src/: allocator.c  debug.c  error.c  main.c
src/includes/: allocator.h  debug.h  error.h  types.h
test/: CMakeLists.txt  alingment.c  alingment.h  allocate.c  allocate.h  assignment.c  assignment.h  deallocate.c  deallocate.h  main.c
